# ha-dimplex-system-m

./: README.md
ha-bridge/: Makefile  README.md  docker-compose.yml
ha-bridge/bridge/: Dockerfile  pyproject.toml
ha-bridge/bridge/uhi_ha_bridge/: __init__.py  __main__.py  config.py  device_keys.py  entities.py  logger.py  mqtt_bridge.py  uhi_client.py
ha-bridge/homeassistant/: configuration.yaml
ha-bridge/mosquitto/config/: mosquitto.conf
ha-integration/: README.md  hacs.json
ha-integration/custom_components/dimplex_uhi/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  discovery.py  entity.py  manifest.json  models.py  names.py  number.py  select.py  sensor.py
ha-integration/custom_components/dimplex_uhi/data/: device_keys.json  names_de.json  names_en.json
ha-integration/custom_components/dimplex_uhi/translations/: de.json  en.json
tools/: dimplex_uhi_firewall.sh  dimplex_uhi_tunnel.sh  extract_names.py
tools/tunnel/: Dockerfile  entrypoint.sh
tools/tunnel/keys/: .gitignore
